# efr32_base

./: README.md
device/EFR32MG13P/Include/: efr32mg13p_acmp.h  efr32mg13p_adc.h  efr32mg13p_af_pins.h  efr32mg13p_af_ports.h  efr32mg13p_cmu.h  efr32mg13p_cryotimer.h  efr32mg13p_crypto.h  efr32mg13p_csen.h  efr32mg13p_devinfo.h  efr32mg13p_dma_descriptor.h  efr32mg13p_dmareq.h  efr32mg13p_emu.h  efr32mg13p_etm.h  efr32mg13p_fpueh.h  efr32mg13p_gpcrc.h  efr32mg13p_gpio.h  efr32mg13p_gpio_p.h  efr32mg13p_i2c.h  efr32mg13p_idac.h  efr32mg13p_ldma.h  efr32mg13p_ldma_ch.h  efr32mg13p_lesense.h  efr32mg13p_lesense_buf.h  efr32mg13p_lesense_ch.h  efr32mg13p_lesense_st.h  efr32mg13p_letimer.h  efr32mg13p_leuart.h  efr32mg13p_msc.h  efr32mg13p_pcnt.h  efr32mg13p_prs.h  efr32mg13p_prs_ch.h  efr32mg13p_prs_signals.h  efr32mg13p_rmu.h  efr32mg13p_romtable.h  efr32mg13p_rtcc.h  efr32mg13p_rtcc_cc.h  efr32mg13p_rtcc_ret.h  efr32mg13p_smu.h  efr32mg13p_timer.h  efr32mg13p_timer_cc.h  (+8 more)
emlib/: CMakeLists.txt
extra/: CMakeLists.txt
extra/inc/: led.h
extra/src/: led.c
hardware/: CMakeLists.txt
protocol/flex/: esf.properties
protocol/z-wave/: esf.properties  modules.xml  release-highlights.txt  templates.xml
protocol/z-wave/studio-docs/: RailTestUserGuide.html  UZB-7P1.rar  docs.xml
protocol/z-wave/studio-modules/: ZAF_ApplicationUtilities.slsproj  ZAF_ApplicationUtilities_EventHandling.slsproj  ZAF_ApplicationUtilities_PowerManagement.slsproj  ZAF_ApplicationUtilities_TrueStatusEngine.slsproj  ZAF_ApplicationUtilities_commonIF.slsproj  ZAF_CommandClasses_Association.slsproj  (+22 more)
protocol/zigbee/: esf.properties
(+800 files in other folders)
